--- a/templates/base.html
+++ b/templates/base.html
@@ -5,19 +5,18 @@
     <title>迷你微博</title>
 </head>
 <body>
-    导航栏
+{#    导航栏#}
     <div></div>
 
-    容器
+{#    容器#}
     <div>
-
-        内容区
+{#        内容区#}
         <div>{% block content %}{% endblock %}</div>
-        边栏区
+{#        边栏区#}
         <div>{% block sidebar %}暂无内容{% endblock %}</div>
     </div>
 
-    底栏区
+{#    底栏区#}
     <div></div>
 
 
